src/objects/smagicinteract__Update_Related_Lists__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Update related lists of incoming and outgoing messages on lead conversion</description>
    <fields>
        <fullName>smagicinteract__Update_Account_Related_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Account Related List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Update_Contact_Related_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Contact Related List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Update_Opportunity_Related_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Opportunity Related List</label>
        <type>Checkbox</type>
    </fields>
    <label>Update Related List On Lead Conversion</label>
</CustomObject>